--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,11 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
     msbuildArguments: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+
+- task: GitHubRelease@0
+  inputs:
+    gitHubConnection: heinzmuller
+    repositoryName: '$(Build.Repository.Name)' 
+    action: 'create'
+    target: '$(Build.SourceVersion)'
+    tagSource: 'auto'
