--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,8 +30,8 @@ steps:
 
 - task: GitHubRelease@0
   inputs:
-    gitHubConnection: heinzmuller
-    repositoryName: '$(Build.Repository.Name)' 
+    gitHubConnection: 'heinzmuller'
+    repositoryName: '$(Build.Repository.Name)'
     action: 'create'
     target: '$(Build.SourceVersion)'
     tagSource: 'auto'
