--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 
 - task: GitHubRelease@0
   inputs:
-    gitHubConnection: 'heinzmuller'
+    gitHubConnection: 'github'
     repositoryName: '$(Build.Repository.Name)'
     action: 'create'
     target: '$(Build.SourceVersion)'
