--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,3 +35,4 @@ steps:
     action: 'create'
     target: '$(Build.SourceVersion)'
     tagSource: 'auto'
+    assets: '$(Build.ArtifactStagingDirectory)/*.exe'
