--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 variables:
   solution: '**/PoETradeAlert.sln'
-  buildPlatform: 'x86'
+  buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
