--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,22 +10,27 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/PoETradeAlert.sln'
+  solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
+- task: NuGetToolInstaller@0
+
+- task: NuGetCommand@2
+  inputs:
+    restoreSolution: '$(solution)'
+
 - task: MSBuild@1
   inputs:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
     msbuildArguments: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    restoreNugetPackages: true
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '$(System.DefaultWorkingDirectory)\bin\$(buildPlatform)\$(buildConfiguration)'
+    SourceFolder: '$(System.DefaultWorkingDirectory)\PoETradeAlert\bin\$(buildConfiguration)'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
