--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,13 +31,23 @@ steps:
 - task: CopyFiles@2
   inputs:
     SourceFolder: '$(System.DefaultWorkingDirectory)\PoETradeAlert\bin\$(buildConfiguration)'
-    Contents: '**'
+    Contents: |
+      **\*.exe
+      **\*.pdb
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishPipelineArtifact@1
   inputs:
     path: '$(Build.ArtifactStagingDirectory)'
     artifact: 'PoETradeAlert'
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
 
 - task: GitHubRelease@0
   inputs:
@@ -46,4 +56,4 @@ steps:
     action: 'create'
     target: '$(Build.SourceVersion)'
     tagSource: 'auto'
-    assets: '$(Build.ArtifactStagingDirectory)/*.exe'
+    assets: '$(Build.ArtifactStagingDirectory)/**/*.zip'
