--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
       **\*.exe
       **\*.config
       **\*.pdb
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/PoETradeAlert'
 
 - task: PublishPipelineArtifact@1
   inputs:
@@ -44,7 +44,7 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/PoETradeAlert'
     includeRootFolder: true
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/PoETradeAlert.zip'
@@ -57,4 +57,4 @@ steps:
     action: 'create'
     target: '$(Build.SourceVersion)'
     tagSource: 'auto'
-    assets: '$(Build.ArtifactStagingDirectory)/**/*.zip'
+    assets: '$(Build.ArtifactStagingDirectory)/PoETradeAlert.zip'
